# YZ-Orin-boat

./: .gitignore  CONCURRENCY.md  README.md  SMALLREADME.md  config.py  config.yaml  pyproject.toml  边缘侧.md
agent/: __init__.py
data/: ships.csv
database/: __init__.py  base.py  csv_source.py  sql_source.py
learn/: H264_CAMERA_CHAIN.md  LEARN_DEMO_BOX_COLOR.md  reqirment.md  requirement.md  txt-requirement.md  流程.md
pipeline/: __init__.py  cli.py  demo.py  detector.py  fps.py  output.py  pipeline.py  tracker.py  video_input.py  virtual_camera.py
tools/: __init__.py
web/: __init__.py  __main__.py  app.py
web/models/: __init__.py  schemas.py
web/routes/: __init__.py  api.py  pages.py  pipeline_api.py
web/services/: __init__.py  ship_service.py
web/static/css/: style.css
web/static/js/: app.js  pipeline.js
web/templates/: index.html
